--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
+    "react-ace": "^6.4.0",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
