--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,28 @@
 language: node_js
 node_js:
   - "stable"
+
+notifications:
+  email: false
+
 cache:
   directories:
   - node_modules
+
 script:
-  - npm test
   - npm run build
+
+after_success:
+  - zip -r build.zip build/
+
+deploy:
+  provider: releases
+  api_key: $github_token
+  file: build.zip
+  skip_cleanup: true
+  overwrite: true
+  on:
+    tags: false
+  branches:
+    only:
+    - master
