--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ deploy:
   skip_cleanup: true
   overwrite: true
   on:
-    tags: false
+    tags: true
     branches:
       only:
       - master
