--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 
 after_success:
   - zip -r build.zip build/
-  - git describe --tags || git tag latest
+  - git tag -d latest ; git tag latest
 
 deploy:
   provider: releases
