set on tags to false

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ deploy:
   skip_cleanup: true
   overwrite: true
   on:
-    tags: true
+    tags: false
     branches:
       only:
       - master
