--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ deploy:
   file: build.zip
   skip_cleanup: true
   overwrite: true
+  target_commitish: latest
   on:
     tags: false
     branches:
