network topology stuff

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux-actions": "^2.6.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-polyglot": "^0.7.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "vis": "^4.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
