--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.5.2",
     "react-ace": "^6.4.0",
     "react-dom": "^16.5.2",
+    "react-markdown": "^4.0.8",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
